@@ -745,6 +745,7 @@ JLIB_DATABASE_ERROR_ROOT_NODE_NOT_FOUND="Root node not found."
 JLIB_DATABASE_ERROR_STORE_FAILED_UPDATE_ASSET_ID="The asset_id field could not be updated"
 JLIB_DATABASE_ERROR_STORE_FAILED="%1$s: :store failed<br />%2$s"
 JLIB_DATABASE_ERROR_USERGROUP_TITLE="Usergroup must have a title"
+JLIB_DATABASE_ERROR_USERGROUP_TITLE_EXISTS="Usergroup title already exists. Title must be unique."
 JLIB_DATABASE_ERROR_USERNAME_CANNOT_CHANGE="Cannot use this user name"
 JLIB_DATABASE_ERROR_USERNAME_INUSE="User name in use"
 JLIB_DATABASE_ERROR_VALID_AZ09="Please enter a valid username. No spaces, at least %d characters and must <strong>not</strong> contain the following characters: < > \ "_QQ_" ' &#37; ; ( ) &"
